Added data-driven panoramas, updated planet names